--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Tetris-using-Raylib)
 
 set(CMAKE_CXX_STANDARD 20)
 
-find_package(raylib REQUIRED) # QUIET or REQUIRED
+find_package(raylib REQUIRED)
 
 add_executable(Tetris-using-Raylib
         src/main.cpp
