Added SFX for Clearing Row(s)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,3 +49,4 @@ configure_file(assets/bgm/bgm-track-1.mp3 assets/bgm/bgm-track-1.mp3 COPYONLY)
 configure_file(assets/fonts/SpaceMono.ttf assets/fonts/SpaceMono.ttf COPYONLY)
 configure_file(assets/highscores/scores.txt assets/highscores/scores.txt COPYONLY)
 configure_file(assets/images/bg.png assets/images/bg.png COPYONLY)
+configure_file(assets/sfx/row-cleared.mp3 assets/sfx/row-cleared.mp3 COPYONLY)
